n#693238 dmapper: fix margin values vs SBkc = 0 at the end of the doc

The problem was that a continous section break at the end of the
document caused the section margins to be ignored. Just ignoring the
continous section break (only in case it's at the end of the document)
makes the problem go away.

The original fix was commit cd1c434c4bd4756fa1355e906cb2e8de4aae0618,
but it got reverted in commit 2dee7d6205832a1212790ac1ab168a6b6fce686d,
as it caused fdo#44292. This second attempt fixes the original bug
again, without introducing the "4 columns" bug.

Change-Id: I75d612430a5cd631dec0d224127cba580070900d